Trying another overflow fix

--- a/presenters/dialog/style.less
+++ b/presenters/dialog/style.less
@@ -148,5 +148,4 @@
 [type="actionsheet"] .dialog {
 	width: auto !important;
 	font-size: 1.2em;
-	max-height: 100vh;
 }
